--- a/package/crossplane.yaml.tmpl
+++ b/package/crossplane.yaml.tmpl
@@ -4,25 +4,25 @@ metadata:
   name: {{ .Name }}
 {{ if ne .Service "monolith" }}
   labels:
-    pkg.crossplane.io/provider-family: provider-family-gcp
+    pkg.crossplane.io/provider-family: provider-{{ .ProviderName }}-config
 {{ end }}
   annotations:
     meta.crossplane.io/maintainer: Upbound <support@upbound.io>
-    meta.crossplane.io/source: github.com/upbound/provider-gcp
+    meta.crossplane.io/source: github.com/upbound/provider-{{ .ProviderName }}
     meta.crossplane.io/description: |
       Upbound's official Crossplane provider to manage Google Cloud Platform (GCP)
       {{ .Service }} services in Kubernetes.
     meta.crossplane.io/readme: |
       Provider GCP is a Crossplane provider for [Google Cloud Platform](https://cloud.google.com/) developed and supported by Upbound.
       Available resources and their fields can be found in the [Upbound
-      Marketplace](https://marketplace.upbound.io/providers/upbound/provider-gcp).
+      Marketplace](https://marketplace.upbound.io/providers/upbound/provider-{{ .ProviderName }}).
       If you encounter an issue please reach out on support@upbound.io email
       address. This is a subpackage for the {{ .Service }} API group.
     friendly-name.meta.crossplane.io: Provider GCP ({{ .Service }})
-    auth.upbound.io/group: gcp.upbound.io
+    auth.upbound.io/group: {{ .ProviderName }}.upbound.io
 {{ if and (ne .Service "config") (ne .Service "monolith") -}}
 spec:
   dependsOn:
-    - provider: {{ .XpkgRegOrg }}/provider-family-gcp
+    - provider: {{ .XpkgRegOrg }}/provider-{{ .ProviderName }}-config
       version: "{{ .DepConstraint }}"
 {{ end }}
