setup controllers gated in main template
Signed-off-by: Erhan Cagirici <erhan@upbound.io>

--- a/hack/main.go.tmpl
+++ b/hack/main.go.tmpl
@@ -16,13 +16,17 @@ import (
 	"github.com/alecthomas/kingpin/v2"
 	xpcontroller "github.com/crossplane/crossplane-runtime/pkg/controller"
 	"github.com/crossplane/crossplane-runtime/pkg/feature"
+	"github.com/crossplane/crossplane-runtime/pkg/gate"
 	"github.com/crossplane/crossplane-runtime/pkg/logging"
 	"github.com/crossplane/crossplane-runtime/pkg/ratelimiter"
+	"github.com/crossplane/crossplane-runtime/pkg/reconciler/customresourcesgate"
 	"github.com/crossplane/crossplane-runtime/pkg/reconciler/managed"
 	"github.com/crossplane/crossplane-runtime/pkg/statemetrics"
 	tjcontroller "github.com/crossplane/upjet/pkg/controller"
 	"github.com/crossplane/upjet/pkg/controller/conversion"
 	"github.com/hashicorp/terraform-provider-google/google/provider"
+	apiextensionsv1 "k8s.io/apiextensions-apiserver/pkg/apis/apiextensions/v1"
+	"k8s.io/apimachinery/pkg/runtime/schema"
 	_ "k8s.io/client-go/plugin/pkg/client/auth/gcp"
 	"k8s.io/client-go/tools/leaderelection/resourcelock"
 	ctrl "sigs.k8s.io/controller-runtime"
@@ -164,6 +168,7 @@ func main() {
 	kingpin.FatalIfError(resolverapis.BuildScheme(clusterapis.AddToSchemes), "Cannot register the cluster-scoped Azure APIs with the API resolver's runtime scheme")
 	kingpin.FatalIfError(namespacedapis.AddToScheme(mgr.GetScheme()), "Cannot add namespace-scoped GCP APIs to scheme")
 	kingpin.FatalIfError(resolverapis.BuildScheme(namespacedapis.AddToSchemes), "Cannot register the namespace-scoped Azure APIs with the API resolver's runtime scheme")
+	kingpin.FatalIfError(apiextensionsv1.AddToScheme(mgr.GetScheme()), "Cannot add api-extensions APIs to scheme")
 
 	metricRecorder := managed.NewMRMetricRecorder()
 	stateMetrics := statemetrics.NewMRStateMetrics()
@@ -177,6 +182,7 @@ func main() {
 	kingpin.FatalIfError(err, "Cannot initialize the cluster provider configuration")
 	namespacedProvider, err := namespacedconfig.GetProvider(ctx, sdkProvider, false)
 	kingpin.FatalIfError(err, "Cannot initialize the namespaced provider configuration")
+	crdGate := new(gate.Gate[schema.GroupVersionKind])
 	clusterOpts := tjcontroller.Options{
 		Options: xpcontroller.Options{
 			Logger:                  logr,
@@ -189,6 +195,7 @@ func main() {
 				MRMetrics:               metricRecorder,
 				MRStateMetrics:          stateMetrics,
 			},
+			Gate: crdGate,
 		},
 		Provider:              clusterProvider,
 		SetupFn:               clients.TerraformSetupBuilder(clusterProvider.TerraformProvider),
@@ -209,6 +216,7 @@ func main() {
 				MRMetrics:               metricRecorder,
 				MRStateMetrics:          stateMetrics,
 			},
+			Gate: crdGate,
 		},
 		Provider:              namespacedProvider,
 		SetupFn:               clients.TerraformSetupBuilder(namespacedProvider.TerraformProvider),
@@ -223,8 +231,9 @@ func main() {
 		logr.Info("Beta feature enabled", "flag", features.EnableBetaManagementPolicies)
 	}
 
+	kingpin.FatalIfError(customresourcesgate.Setup(mgr, namespacedOpts.Options), "Cannot setup CRD gate")
 	kingpin.FatalIfError(conversion.RegisterConversions(clusterOpts.Provider, namespacedOpts.Provider, mgr.GetScheme()), "Cannot initialize the webhook conversion registry")
-	kingpin.FatalIfError(clustercontroller.Setup_{{ .Group }}(mgr, clusterOpts), "Cannot setup cluster-scoped GCP controllers")
-	kingpin.FatalIfError(namespacedcontroller.Setup_{{ .Group }}(mgr, namespacedOpts), "Cannot setup namespaced GCP controllers")
+	kingpin.FatalIfError(clustercontroller.SetupGated_{{ .Group }}(mgr, clusterOpts), "Cannot setup cluster-scoped GCP controllers")
+	kingpin.FatalIfError(namespacedcontroller.SetupGated_{{ .Group }}(mgr, namespacedOpts), "Cannot setup namespaced GCP controllers")
 	kingpin.FatalIfError(mgr.Start(ctrl.SetupSignalHandler()), "Cannot start controller manager")
 }
