add SafeStart to provider capabilities
Signed-off-by: Erhan Cagirici <erhan@upbound.io>

--- a/package/crossplane.yaml.tmpl
+++ b/package/crossplane.yaml.tmpl
@@ -31,6 +31,8 @@ spec:
 {{ if ne .Service "monolith" }}
   crossplane:
     version: ">=v1.12.1-0"
+  capabilities:
+    - SafeStart
 {{ end }}
 {{ if and (ne .Service "config") (ne .Service "monolith") }}
   dependsOn:
